[fix] sigma integration entry in ui not showing

--- a/custom_components/sigma_alarm/manifest.json
+++ b/custom_components/sigma_alarm/manifest.json
@@ -2,8 +2,9 @@
     "domain": "sigma_alarm",
     "name": "Sigma Alarm",
     "version": "1.0.0",
-    "integration_type": "integration",
+    "integration_type": "device",
     "documentation": "https://github.com/phoinixgrr/sigma_connect_ha",
+    "issue_tracker": "https://github.com/phoinixgrr/sigma_connect_ha/issues",
     "requirements": [],
     "codeowners": ["@phoinixgrr"],
     "config_flow": true,
