[fix] Alligning to HACS specs
https://github.com/hacs/default

--- a/custom_components/sigma_connect_ha/manifest.json
+++ b/custom_components/sigma_connect_ha/manifest.json
@@ -1,5 +1,5 @@
 {
-    "domain": "sigma_alarm",
+    "domain": "sigma_connect_ha",
     "name": "Sigma Alarm",
     "version": "1.0.0",
     "integration_type": "device",
